--- a/CSS/default.css
+++ b/CSS/default.css
@@ -1,5 +1,5 @@
 body {
-	background-color : #59c676;
+	background-color : #ffe6e6;
 	margin: 20px;
 	padding: 20px;
 }
@@ -7,8 +7,8 @@ a {
 	margin: 20px;
 	padding: 20px;
 }
-input[type=text], input[type=password] {
-	 background-color : #ffffcc;
+input[type=text] {
+	background-color : #ffffcc;
     position: absolute;
 	left: 300px;
     box-sizing: border-box;
